<resources>
    <string name="app_name">AssessmentBelajarAndroidForm</string>
    <string name="title_app">Assessment Belajar Android Form</string>
    <string name="nim">NIM</string>
    <string name="nim_hint">Masukkan NIM Anda</string>
    <string name="nama">Nama</string>
    <string name="nama_hint">Masukkan Nama Lengakp Anda</string>
    <string name="semester">Semester</string>
    <string name="info_perangkat_device">Informasi Perangkat</string>
    <string name="rad_device">Device Untuk Coding</string>
    <string name="rad_pc">PC Desktop</string>
    <string name="rad_laptop">Laptop</string>
    <string name="rad_tidak_punya">Tidak Punya</string>
    <string name="rad_os">OS yang digunakan</string>
    <string name="rad_windows">Windows</string>
    <string name="rad_linux">Linux</string>
    <string name="rad_macos">Mac OS</string>
    <string name="versi_os">Nama Versi OS dan bitnya</string>
    <string name="versi_os_hint">Masukkan Nama Versi OS dan bitnya</string>
    <string name="ram">Ram</string>
    <string name="ram_hint">Masukkan Ram yang digunakan</string>
    <string name="cpu">CPU</string>
    <string name="cpu_hint">Masukkan Nama CPU yang digunakan</string>
    <string name="rad_deploy">Deployment</string>
    <string name="rad_emulator">Emulaor</string>
    <string name="rad_device_kabel">Device Kabel</string>
    <string name="rad_device_wifi">Device Wifi</string>
    <string name="rad_tidak_bisa_deploy">Tidak Bisa Deploy</string>
    <string name="info_perangkat_mobile">Perangkat Mobile</string>
    <string name="merk_hp">Merk HP</string>
    <string name="versi_os_hp">OS HP dan Versi nya</string>
    <string name="versi_os_hp_hint">Masukkan OS HP dan Versi nya</string>
    <string name="ukuran_hp">Ukuran HP</string>
    <string name="ukuran_hp_hint">Masukkan Ukuran HP</string>
    <string name="rad_internet">Penggunaan Internet Ketika Coding</string>
    <string name="rad_tethering">Tethering HP Sendiri</string>
    <string name="rad_wifi_sendiri">Wifi Sendiri</string>
    <string name="rad_wifi_nebeng">Wifi Nebeng</string>
    <string name="rad_tidak_punya_wifi">Tidak Punya</string>
    <string name="install_android">Instalasi Android Studio</string>
    <string name="rad_install_android">Sudah install Android Studio?</string>
    <string name="rad_install_sudah">Sudah</string>
    <string name="rad_install_belum">Belum</string>
    <string name="rad_install_tidak_bisa">Tidak Bisa</string>
    <string name="versi_install_android">Nama Versi Android Studio yang Diinstall</string>
    <string name="versi_install_android_hint">Masukkan Versi Android Studio</string>
    <string name="title_result">Hasil Pengisian Form</string>
    <string name="submit">Simpan</string>
    <string name="info_developer">Info Developer</string>
</resources>